Add login schemas
